--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 body {
     font-size: 16px;
     font-family: 'Red Hat Display', sans-serif;
-    background-color: var(--pale-blue);
+    background-image: url(./images/pattern-background-desktop.svg);
 }
 
 .btn {
