--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
     font-size: 16px;
     font-family: 'Red Hat Display', sans-serif;
     background-image: url(./images/pattern-background-desktop.svg);
+    background-position: center;
+    background-size: cover;
 }
 
 .btn {
